--- a/projets/Annexe_1_Shared_Preferences/app/src/main/res/layout/activity_main.xml
+++ b/projets/Annexe_1_Shared_Preferences/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnAjouter"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="5dp"
@@ -35,7 +35,7 @@
             android:text="Ajouter" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/btnAfficher"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="5dp"
@@ -44,7 +44,7 @@
             android:text="Afficher" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/btnQuitter"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="5dp"
