--- a/projets/Annexe_5B_AppExterne/app/src/main/res/layout/activity_main.xml
+++ b/projets/Annexe_5B_AppExterne/app/src/main/res/layout/activity_main.xml
@@ -45,9 +45,10 @@
         android:text="Prendre photo" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/champImage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:scaleType="fitXY"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 </LinearLayout>
