--- a/TP/TP_1_clone_spotify/app/src/main/res/layout/activity_playlist_menu.xml
+++ b/TP/TP_1_clone_spotify/app/src/main/res/layout/activity_playlist_menu.xml
@@ -7,7 +7,26 @@
     android:orientation="vertical"
     tools:context=".PlaylistMenuActivity">
 
-    <ListView
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/radioheadtitle" />
+
+    <ListView
+        android:id="@+id/liste"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+    </ListView>
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        app:srcCompat="@drawable/radiohead" />
 </LinearLayout>
