--- a/TP/TP_1_clone_spotify/app/src/main/res/layout/activity_player.xml
+++ b/TP/TP_1_clone_spotify/app/src/main/res/layout/activity_player.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     android:orientation="vertical"
     tools:context=".PlayerActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.12"
+        android:layout_weight="0.15"
         android:orientation="horizontal"
         android:textAlignment="center">
 
@@ -19,8 +20,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="TextView"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/white" />
 
         <ImageView
             android:id="@+id/playlistMenu"
@@ -45,24 +47,24 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        android:text="TextView"
         android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/songArtist"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        android:text="TextView"
         android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/white" />
 
     <SeekBar
         android:id="@+id/seekBar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.15" />
+        android:layout_weight="0.2" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -75,7 +77,9 @@
             android:id="@+id/timeElapsed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:countDown="false" />
+            android:layout_marginStart="15dp"
+            android:countDown="false"
+            android:textColor="@color/white" />
 
         <Space
             android:layout_width="wrap_content"
@@ -86,7 +90,9 @@
             android:id="@+id/timeLeft"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:countDown="true" />
+            android:layout_marginEnd="15dp"
+            android:countDown="true"
+            android:textColor="@color/white" />
     </LinearLayout>
 
     <LinearLayout
@@ -110,10 +116,7 @@
             android:adjustViewBounds="false"
             android:rotationY="180"
             android:scaleType="centerInside"
-            android:scaleX="0.75"
-            android:scaleY="0.75"
-            android:src="@drawable/skip_button"
-            android:translationY="-5dp" />
+            android:src="@drawable/skip_button" />
 
         <ImageView
             android:id="@+id/imgStartPause"
@@ -122,10 +125,7 @@
             android:layout_weight="0.5"
             android:adjustViewBounds="false"
             android:scaleType="centerInside"
-            android:scaleX="0.75"
-            android:scaleY="0.75"
-            android:src="@drawable/play"
-            android:translationY="-5dp" />
+            android:src="@drawable/play" />
 
         <ImageView
             android:id="@+id/imgSkipNext"
@@ -134,10 +134,7 @@
             android:layout_weight="0.5"
             android:adjustViewBounds="false"
             android:scaleType="centerInside"
-            android:scaleX="0.75"
-            android:scaleY="0.75"
-            android:src="@drawable/skip_button"
-            android:translationY="-5dp" />
+            android:src="@drawable/skip_button" />
 
         <Space
             android:layout_width="0dp"
@@ -145,5 +142,10 @@
             android:layout_weight="0.5" />
 
     </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1" />
 
 </LinearLayout>
