--- a/TP/TP_1_clone_spotify/app/src/main/res/layout/activity_player.xml
+++ b/TP/TP_1_clone_spotify/app/src/main/res/layout/activity_player.xml
@@ -81,10 +81,14 @@
             android:countDown="false"
             android:textColor="@color/white" />
 
-        <Space
+        <TextView
+            android:id="@+id/lien"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:text="Radiohead.com"
+            android:textAlignment="center"
+            android:textColor="@color/white" />
 
         <Chronometer
             android:id="@+id/timeLeft"
