--- a/TP/TPFinalQuiz/app/src/main/res/layout/activity_question1.xml
+++ b/TP/TPFinalQuiz/app/src/main/res/layout/activity_question1.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="40dp"
-    tools:context=".Question1Activity">
+    tools:context=".Question1">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,6 +61,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.15"
+        android:inputType="textMultiLine"
+        android:text="Resultat"
         android:textAlignment="center"
         android:textSize="20sp" />
 
