--- a/TP/TPFinalQuiz/app/src/main/res/layout/activity_question1.xml
+++ b/TP/TPFinalQuiz/app/src/main/res/layout/activity_question1.xml
@@ -76,7 +76,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:translationX="-250dp">
 
             <com.android.volley.toolbox.NetworkImageView
                 android:id="@+id/img11"
@@ -105,7 +106,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:translationX="250dp">
 
             <com.android.volley.toolbox.NetworkImageView
                 android:id="@+id/img12"
