--- a/TP/TPFinalQuiz/app/src/main/res/layout/activity_main.xml
+++ b/TP/TPFinalQuiz/app/src/main/res/layout/activity_main.xml
@@ -46,21 +46,33 @@
         android:scaleY="0"
         app:srcCompat="@drawable/photo_eric" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.1" />
-
-    <TextView
-        android:id="@+id/bestScore"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.25"
-        android:inputType="textMultiLine"
-        android:text="Meilleur score :\n0"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:paddingTop="20dp"
+            android:text="Meilleur score :"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/bestScore"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.75"
+            android:paddingTop="15dp"
+            android:text="0"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnStart"
