--- a/TP/TPFinalQuiz/app/src/main/res/layout/activity_main.xml
+++ b/TP/TPFinalQuiz/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -19,6 +20,7 @@
         android:layout_weight="0.15"
         android:text="Bienvenue au Quiz en l'honneur de "
         android:textAlignment="center"
+        android:textColor="@color/orange"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -33,6 +35,7 @@
         android:scaleY="10"
         android:text="ÉRIC LABONTÉ"
         android:textAlignment="center"
+        android:textColor="@color/orange"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -59,6 +62,7 @@
             android:paddingTop="20dp"
             android:text="Meilleur score :"
             android:textAlignment="center"
+            android:textColor="@color/green"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -70,6 +74,7 @@
             android:paddingTop="15dp"
             android:text="0"
             android:textAlignment="center"
+            android:textColor="@color/green"
             android:textSize="24sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -79,8 +84,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.25"
+        android:background="@color/comments"
         android:scaleX="0.75"
         android:scaleY="0.75"
-        android:text="Commencer le Quiz" />
+        android:text="Commencer le Quiz"
+        android:textColor="@color/orange" />
 
 </LinearLayout>
