--- a/TP/TPFinalQuiz/app/src/main/res/layout/activity_main.xml
+++ b/TP/TPFinalQuiz/app/src/main/res/layout/activity_main.xml
@@ -84,10 +84,11 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.25"
-        android:background="@color/comments"
+        android:background="@color/orange"
         android:scaleX="0.75"
         android:scaleY="0.75"
         android:text="Commencer le Quiz"
-        android:textColor="@color/orange" />
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
 </LinearLayout>
