--- a/TP/TPFinalQuiz/app/src/main/res/layout/fragment_question1.xml
+++ b/TP/TPFinalQuiz/app/src/main/res/layout/fragment_question1.xml
@@ -5,9 +5,10 @@
     android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:orientation="vertical"
     android:padding="40dp"
-    tools:context=".Question1">
+    tools:context=".QuestionFollowers">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,6 +34,7 @@
                 android:layout_weight="1"
                 android:text="Score"
                 android:textAlignment="center"
+                android:textColor="@color/green"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -41,6 +43,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.75"
+                android:textColor="@color/green"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -53,6 +56,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.35"
         android:textAlignment="center"
+        android:textColor="@color/yellow"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -62,7 +66,6 @@
         android:layout_height="0dp"
         android:layout_weight="0.15"
         android:inputType="textMultiLine"
-        android:text="Resultat"
         android:textAlignment="center"
         android:textSize="20sp" />
 
