--- a/TP/TPFinalQuiz/app/src/main/res/layout/fragment_question1.xml
+++ b/TP/TPFinalQuiz/app/src/main/res/layout/fragment_question1.xml
@@ -16,16 +16,16 @@
         android:layout_weight="0.10"
         android:orientation="horizontal">
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="horizontal">
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -46,6 +46,12 @@
                 android:textColor="@color/green"
                 android:textSize="16sp"
                 android:textStyle="bold" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
         </LinearLayout>
 
     </LinearLayout>
@@ -57,17 +63,17 @@
         android:layout_weight="0.35"
         android:textAlignment="center"
         android:textColor="@color/yellow"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/result3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.15"
+        android:layout_weight="0.20"
         android:inputType="textMultiLine"
         android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -100,6 +106,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.35"
                 android:textAlignment="center"
+                android:textColor="@color/purple"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -130,6 +137,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.35"
                 android:textAlignment="center"
+                android:textColor="@color/purple"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
