--- a/TP/TPFinalQuiz/app/src/main/res/layout/fragment_question2.xml
+++ b/TP/TPFinalQuiz/app/src/main/res/layout/fragment_question2.xml
@@ -64,10 +64,10 @@
         android:id="@+id/result3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.15"
+        android:layout_weight="0.20"
         android:inputType="textMultiLine"
         android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -100,6 +100,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.35"
                 android:textAlignment="center"
+                android:textColor="@color/purple"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -130,6 +131,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.35"
                 android:textAlignment="center"
+                android:textColor="@color/purple"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
