--- a/TP/TPFinalQuiz/app/src/main/res/layout/fragment_question3.xml
+++ b/TP/TPFinalQuiz/app/src/main/res/layout/fragment_question3.xml
@@ -46,7 +46,13 @@
                 android:textColor="@color/green"
                 android:textSize="16sp"
                 android:textStyle="bold" />
+
         </LinearLayout>
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
     </LinearLayout>
 
